--- a/public/index.html
+++ b/public/index.html
@@ -10,34 +10,32 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>React App</title>
+    <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
   </head>
-  <body>
+  <body style="background-color: #fd3a69;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <div id="root" style="text-align:center"></div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div id="count" style="background-color: #fecd1a;text-align: center">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    </div>
+    <div style="text-align:center;">
+      <h3>Created by Jesse Evans-42219 with React and MaterialUI</h3>
+      <h3>Not my final form,yet</h3>
+      <p>Known bugs : Result yang ditampilin itu hasil input dari sebelumnya, coba aja dulu entar juga berasa errornya</p>
+      <a href="https://github.com/10thjeh/converter">Repo</a>
+    </div>
   </body>
 </html>
